pp2/y.output
State 51 conflicts: 1 shift/reduce
State 71 conflicts: 1 shift/reduce
State 103 conflicts: 1 shift/reduce
State 112 conflicts: 1 reduce/reduce
State 113 conflicts: 1 reduce/reduce
State 159 conflicts: 1 reduce/reduce
State 160 conflicts: 1 reduce/reduce
State 161 conflicts: 1 reduce/reduce
State 162 conflicts: 1 reduce/reduce
State 163 conflicts: 1 reduce/reduce
State 164 conflicts: 1 reduce/reduce
State 165 conflicts: 1 reduce/reduce
State 166 conflicts: 1 reduce/reduce
State 167 conflicts: 1 reduce/reduce
State 168 conflicts: 1 reduce/reduce
State 169 conflicts: 1 reduce/reduce
State 170 conflicts: 1 reduce/reduce
State 171 conflicts: 1 reduce/reduce
State 174 conflicts: 1 reduce/reduce
State 179 conflicts: 1 shift/reduce, 1 reduce/reduce
State 191 conflicts: 1 shift/reduce


Grammar

    0 $accept: Program $end

    1 Program: DeclList

    2 DeclList: DeclList Decl
    3         | Decl

    4 Decl: VarDecl
    5     | FnDecl
    6     | ClassDecl
    7     | InterfaceDecl

    8 VarDecl: Variable ';'

    9 Variable: Type T_Identifier

   10 Type: T_Int
   11     | T_Bool
   12     | T_String
   13     | T_Double
   14     | T_Identifier
   15     | Type T_Dims

   16 FnDecl: FnHeader StmtBlock

   17 FnHeader: Type T_Identifier '(' Formals ')'
   18         | T_Void T_Identifier '(' Formals ')'

   19 Formals: FormalList
   20        | %empty

   21 FormalList: FormalList ',' Variable
   22           | Variable

   23 StmtBlock: '{' VarDecls StmtList '}'

   24 VarDecls: VarDecls VarDecl
   25         | %empty

   26 StmtList: Stmt StmtList
   27         | %empty

   28 Stmt: Expr ';'
   29     | IfStmt
   30     | WhileStmt
   31     | ForStmt
   32     | BreakStmt
   33     | ReturnStmt
   34     | PrintStmt
   35     | StmtBlock
   36     | SwitchStmt

   37 Expr: EExpr ';'
   38     | LValue '=' Expr
   39     | Constant
   40     | LValue
   41     | T_This
   42     | Call
   43     | '(' Expr ')'
   44     | Expr '+' Expr
   45     | Expr '-' Expr
   46     | Expr '*' Expr
   47     | Expr '/' Expr
   48     | Expr '%' Expr
   49     | '-' Expr
   50     | Expr '<' Expr
   51     | Expr T_LessEqual Expr
   52     | Expr '>' Expr
   53     | Expr T_GreaterEqual Expr
   54     | Expr T_Equal Expr
   55     | Expr T_NotEqual Expr
   56     | Expr T_And Expr
   57     | Expr T_Or Expr
   58     | '!' Expr
   59     | T_ReadInteger '(' ')'
   60     | T_ReadLine '(' ')'
   61     | T_New '(' T_Identifier ')'
   62     | T_NewArray '(' Expr ',' Type ')'
   63     | LValue T_Dec
   64     | LValue T_Inc

   65 EExpr: %empty
   66      | Expr

   67 IfStmt: T_If '(' Expr ')' Stmt
   68       | T_If '(' Expr ')' Stmt T_Else Stmt

   69 WhileStmt: T_While '(' Expr ')' Stmt

   70 ForStmt: T_For '(' EExpr ';' Expr ';' EExpr ')' Stmt

   71 BreakStmt: T_Break ';'

   72 ReturnStmt: T_Return Expr ';'
   73           | T_Return ';'

   74 PrintStmt: T_Print '(' ExprList ')' ';'

   75 SwitchStmt: T_Switch '(' Expr ')' '{' Switch '}'

   76 Switch: SwitchCases Default
   77       | SwitchCases

   78 SwitchCases: SwitchCases Case
   79            | Case

   80 Case: T_Case T_IntConstant ':' StmtList

   81 Default: T_Default ':' StmtList

   82 Constant: T_IntConstant
   83         | T_DoubleConstant
   84         | T_BoolConstant
   85         | T_StringConstant
   86         | T_Null

   87 LValue: T_Identifier
   88       | Expr '.' T_Identifier
   89       | Expr '[' Expr ']'

   90 Call: T_Identifier '(' Actuals ')'
   91     | Expr '.' T_Identifier '(' Actuals ')'

   92 Actuals: ExprList
   93        | %empty

   94 ExprList: ExprList ',' Expr
   95         | Expr

   96 ClassDecl: T_Class T_Identifier T_Extends T_Identifier T_Implements ImplementList '{' FieldList '}'
   97          | T_Class T_Identifier T_Implements ImplementList '{' FieldList '}'
   98          | T_Class T_Identifier T_Extends T_Identifier '{' FieldList '}'
   99          | T_Class T_Identifier '{' FieldList '}'

  100 ImplementList: ImplementList T_Identifier ','
  101              | T_Identifier

  102 FieldList: FieldList Field
  103          | %empty

  104 Field: VarDecl
  105      | FnDecl

  106 InterfaceDecl: T_Interface T_Identifier '{' PrototypeList '}'

  107 PrototypeList: PrototypeList FnHeader ';'
  108              | %empty


Terminals, with rules where they appear

$end (0) 0
'!' (33) 58
'%' (37) 48
'(' (40) 17 18 43 59 60 61 62 67 68 69 70 74 75 90 91
')' (41) 17 18 43 59 60 61 62 67 68 69 70 74 75 90 91
'*' (42) 46
'+' (43) 44
',' (44) 21 62 94 100
'-' (45) 45 49
'.' (46) 88 91
'/' (47) 47
':' (58) 80 81
';' (59) 8 28 37 70 71 72 73 74 107
'<' (60) 50
'=' (61) 38
'>' (62) 52
'[' (91) 89
']' (93) 89
'{' (123) 23 75 96 97 98 99 106
'}' (125) 23 75 96 97 98 99 106
error (256)
T_Void (258) 18
T_Bool (259) 11
T_Int (260) 10
T_Double (261) 13
T_String (262) 12
T_Class (263) 96 97 98 99
T_LessEqual (264) 51
T_GreaterEqual (265) 53
T_Equal (266) 54
T_NotEqual (267) 55
T_Dims (268) 15
T_And (269) 56
T_Or (270) 57
T_Null (271) 86
T_Extends (272) 96 98
T_This (273) 41
T_Interface (274) 106
T_Implements (275) 96 97
T_While (276) 69
T_For (277) 70
T_If (278) 67 68
T_Else (279) 68
T_Return (280) 72 73
T_Break (281) 71
T_New (282) 61
T_NewArray (283) 62
T_Print (284) 74
T_ReadInteger (285) 59
T_ReadLine (286) 60
T_Switch (287) 75
T_Case (288) 80
T_Default (289) 81
T_Inc (290) 64
T_Dec (291) 63
T_Identifier (292) 9 14 17 18 61 87 88 90 91 96 97 98 99 100 101 106
T_StringConstant (293) 85
T_IntConstant (294) 80 82
T_DoubleConstant (295) 83
T_BoolConstant (296) 84
NO_ELSE (297)
UNARY (298)


Nonterminals, with rules where they appear

$accept (63)
    on left: 0
Program (64)
    on left: 1, on right: 0
DeclList (65)
    on left: 2 3, on right: 1 2
Decl (66)
    on left: 4 5 6 7, on right: 2 3
VarDecl (67)
    on left: 8, on right: 4 24 104
Variable (68)
    on left: 9, on right: 8 21 22
Type (69)
    on left: 10 11 12 13 14 15, on right: 9 15 17 62
FnDecl (70)
    on left: 16, on right: 5 105
FnHeader (71)
    on left: 17 18, on right: 16 107
Formals (72)
    on left: 19 20, on right: 17 18
FormalList (73)
    on left: 21 22, on right: 19 21
StmtBlock (74)
    on left: 23, on right: 16 35
VarDecls (75)
    on left: 24 25, on right: 23 24
StmtList (76)
    on left: 26 27, on right: 23 26 80 81
Stmt (77)
    on left: 28 29 30 31 32 33 34 35 36, on right: 26 67 68 69 70
Expr (78)
    on left: 37 38 39 40 41 42 43 44 45 46 47 48 49 50 51 52 53 54
    55 56 57 58 59 60 61 62 63 64, on right: 28 38 43 44 45 46 47 48
    49 50 51 52 53 54 55 56 57 58 62 66 67 68 69 70 72 75 88 89 91
    94 95
EExpr (79)
    on left: 65 66, on right: 37 70
IfStmt (80)
    on left: 67 68, on right: 29
WhileStmt (81)
    on left: 69, on right: 30
ForStmt (82)
    on left: 70, on right: 31
BreakStmt (83)
    on left: 71, on right: 32
ReturnStmt (84)
    on left: 72 73, on right: 33
PrintStmt (85)
    on left: 74, on right: 34
SwitchStmt (86)
    on left: 75, on right: 36
Switch (87)
    on left: 76 77, on right: 75
SwitchCases (88)
    on left: 78 79, on right: 76 77 78
Case (89)
    on left: 80, on right: 78 79
Default (90)
    on left: 81, on right: 76
Constant (91)
    on left: 82 83 84 85 86, on right: 39
LValue (92)
    on left: 87 88 89, on right: 38 40 63 64
Call (93)
    on left: 90 91, on right: 42
Actuals (94)
    on left: 92 93, on right: 90 91
ExprList (95)
    on left: 94 95, on right: 74 92 94
ClassDecl (96)
    on left: 96 97 98 99, on right: 6
ImplementList (97)
    on left: 100 101, on right: 96 97 100
FieldList (98)
    on left: 102 103, on right: 96 97 98 99 102
Field (99)
    on left: 104 105, on right: 102
InterfaceDecl (100)
    on left: 106, on right: 7
PrototypeList (101)
    on left: 107 108, on right: 106 107


State 0

    0 $accept: . Program $end

    T_Void        shift, and go to state 1
    T_Bool        shift, and go to state 2
    T_Int         shift, and go to state 3
    T_Double      shift, and go to state 4
    T_String      shift, and go to state 5
    T_Class       shift, and go to state 6
    T_Interface   shift, and go to state 7
    T_Identifier  shift, and go to state 8

    Program        go to state 9
    DeclList       go to state 10
    Decl           go to state 11
    VarDecl        go to state 12
    Variable       go to state 13
    Type           go to state 14
    FnDecl         go to state 15
    FnHeader       go to state 16
    ClassDecl      go to state 17
    InterfaceDecl  go to state 18


State 1

   18 FnHeader: T_Void . T_Identifier '(' Formals ')'

    T_Identifier  shift, and go to state 19


State 2

   11 Type: T_Bool .

    $default  reduce using rule 11 (Type)


State 3

   10 Type: T_Int .

    $default  reduce using rule 10 (Type)


State 4

   13 Type: T_Double .

    $default  reduce using rule 13 (Type)


State 5

   12 Type: T_String .

    $default  reduce using rule 12 (Type)


State 6

   96 ClassDecl: T_Class . T_Identifier T_Extends T_Identifier T_Implements ImplementList '{' FieldList '}'
   97          | T_Class . T_Identifier T_Implements ImplementList '{' FieldList '}'
   98          | T_Class . T_Identifier T_Extends T_Identifier '{' FieldList '}'
   99          | T_Class . T_Identifier '{' FieldList '}'

    T_Identifier  shift, and go to state 20


State 7

  106 InterfaceDecl: T_Interface . T_Identifier '{' PrototypeList '}'

    T_Identifier  shift, and go to state 21


State 8

   14 Type: T_Identifier .

    $default  reduce using rule 14 (Type)


State 9

    0 $accept: Program . $end

    $end  shift, and go to state 22


State 10

    1 Program: DeclList .
    2 DeclList: DeclList . Decl

    T_Void        shift, and go to state 1
    T_Bool        shift, and go to state 2
    T_Int         shift, and go to state 3
    T_Double      shift, and go to state 4
    T_String      shift, and go to state 5
    T_Class       shift, and go to state 6
    T_Interface   shift, and go to state 7
    T_Identifier  shift, and go to state 8

    $default  reduce using rule 1 (Program)

    Decl           go to state 23
    VarDecl        go to state 12
    Variable       go to state 13
    Type           go to state 14
    FnDecl         go to state 15
    FnHeader       go to state 16
    ClassDecl      go to state 17
    InterfaceDecl  go to state 18


State 11

    3 DeclList: Decl .

    $default  reduce using rule 3 (DeclList)


State 12

    4 Decl: VarDecl .

    $default  reduce using rule 4 (Decl)


State 13

    8 VarDecl: Variable . ';'

    ';'  shift, and go to state 24


State 14

    9 Variable: Type . T_Identifier
   15 Type: Type . T_Dims
   17 FnHeader: Type . T_Identifier '(' Formals ')'

    T_Dims        shift, and go to state 25
    T_Identifier  shift, and go to state 26


State 15

    5 Decl: FnDecl .

    $default  reduce using rule 5 (Decl)


State 16

   16 FnDecl: FnHeader . StmtBlock

    '{'  shift, and go to state 27

    StmtBlock  go to state 28


State 17

    6 Decl: ClassDecl .

    $default  reduce using rule 6 (Decl)


State 18

    7 Decl: InterfaceDecl .

    $default  reduce using rule 7 (Decl)


State 19

   18 FnHeader: T_Void T_Identifier . '(' Formals ')'

    '('  shift, and go to state 29


State 20

   96 ClassDecl: T_Class T_Identifier . T_Extends T_Identifier T_Implements ImplementList '{' FieldList '}'
   97          | T_Class T_Identifier . T_Implements ImplementList '{' FieldList '}'
   98          | T_Class T_Identifier . T_Extends T_Identifier '{' FieldList '}'
   99          | T_Class T_Identifier . '{' FieldList '}'

    T_Extends     shift, and go to state 30
    T_Implements  shift, and go to state 31
    '{'           shift, and go to state 32


State 21

  106 InterfaceDecl: T_Interface T_Identifier . '{' PrototypeList '}'

    '{'  shift, and go to state 33


State 22

    0 $accept: Program $end .

    $default  accept


State 23

    2 DeclList: DeclList Decl .

    $default  reduce using rule 2 (DeclList)


State 24

    8 VarDecl: Variable ';' .

    $default  reduce using rule 8 (VarDecl)


State 25

   15 Type: Type T_Dims .

    $default  reduce using rule 15 (Type)


State 26

    9 Variable: Type T_Identifier .
   17 FnHeader: Type T_Identifier . '(' Formals ')'

    '('  shift, and go to state 34

    $default  reduce using rule 9 (Variable)


State 27

   23 StmtBlock: '{' . VarDecls StmtList '}'

    $default  reduce using rule 25 (VarDecls)

    VarDecls  go to state 35


State 28

   16 FnDecl: FnHeader StmtBlock .

    $default  reduce using rule 16 (FnDecl)


State 29

   18 FnHeader: T_Void T_Identifier '(' . Formals ')'

    T_Bool        shift, and go to state 2
    T_Int         shift, and go to state 3
    T_Double      shift, and go to state 4
    T_String      shift, and go to state 5
    T_Identifier  shift, and go to state 8

    $default  reduce using rule 20 (Formals)

    Variable    go to state 36
    Type        go to state 37
    Formals     go to state 38
    FormalList  go to state 39


State 30

   96 ClassDecl: T_Class T_Identifier T_Extends . T_Identifier T_Implements ImplementList '{' FieldList '}'
   98          | T_Class T_Identifier T_Extends . T_Identifier '{' FieldList '}'

    T_Identifier  shift, and go to state 40


State 31

   97 ClassDecl: T_Class T_Identifier T_Implements . ImplementList '{' FieldList '}'

    T_Identifier  shift, and go to state 41

    ImplementList  go to state 42


State 32

   99 ClassDecl: T_Class T_Identifier '{' . FieldList '}'

    $default  reduce using rule 103 (FieldList)

    FieldList  go to state 43


State 33

  106 InterfaceDecl: T_Interface T_Identifier '{' . PrototypeList '}'

    $default  reduce using rule 108 (PrototypeList)

    PrototypeList  go to state 44


State 34

   17 FnHeader: Type T_Identifier '(' . Formals ')'

    T_Bool        shift, and go to state 2
    T_Int         shift, and go to state 3
    T_Double      shift, and go to state 4
    T_String      shift, and go to state 5
    T_Identifier  shift, and go to state 8

    $default  reduce using rule 20 (Formals)

    Variable    go to state 36
    Type        go to state 37
    Formals     go to state 45
    FormalList  go to state 39


State 35

   23 StmtBlock: '{' VarDecls . StmtList '}'
   24 VarDecls: VarDecls . VarDecl

    T_Bool            shift, and go to state 2
    T_Int             shift, and go to state 3
    T_Double          shift, and go to state 4
    T_String          shift, and go to state 5
    T_Null            shift, and go to state 46
    T_This            shift, and go to state 47
    T_While           shift, and go to state 48
    T_For             shift, and go to state 49
    T_If              shift, and go to state 50
    T_Return          shift, and go to state 51
    T_Break           shift, and go to state 52
    T_New             shift, and go to state 53
    T_NewArray        shift, and go to state 54
    T_Print           shift, and go to state 55
    T_ReadInteger     shift, and go to state 56
    T_ReadLine        shift, and go to state 57
    T_Switch          shift, and go to state 58
    T_Identifier      shift, and go to state 59
    T_StringConstant  shift, and go to state 60
    T_IntConstant     shift, and go to state 61
    T_DoubleConstant  shift, and go to state 62
    T_BoolConstant    shift, and go to state 63
    '-'               shift, and go to state 64
    '!'               shift, and go to state 65
    '('               shift, and go to state 66
    '{'               shift, and go to state 27

    ';'       reduce using rule 65 (EExpr)
    $default  reduce using rule 27 (StmtList)

    VarDecl     go to state 67
    Variable    go to state 13
    Type        go to state 37
    StmtBlock   go to state 68
    StmtList    go to state 69
    Stmt        go to state 70
    Expr        go to state 71
    EExpr       go to state 72
    IfStmt      go to state 73
    WhileStmt   go to state 74
    ForStmt     go to state 75
    BreakStmt   go to state 76
    ReturnStmt  go to state 77
    PrintStmt   go to state 78
    SwitchStmt  go to state 79
    Constant    go to state 80
    LValue      go to state 81
    Call        go to state 82


State 36

   22 FormalList: Variable .

    $default  reduce using rule 22 (FormalList)


State 37

    9 Variable: Type . T_Identifier
   15 Type: Type . T_Dims

    T_Dims        shift, and go to state 25
    T_Identifier  shift, and go to state 83


State 38

   18 FnHeader: T_Void T_Identifier '(' Formals . ')'

    ')'  shift, and go to state 84


State 39

   19 Formals: FormalList .
   21 FormalList: FormalList . ',' Variable

    ','  shift, and go to state 85

    $default  reduce using rule 19 (Formals)


State 40

   96 ClassDecl: T_Class T_Identifier T_Extends T_Identifier . T_Implements ImplementList '{' FieldList '}'
   98          | T_Class T_Identifier T_Extends T_Identifier . '{' FieldList '}'

    T_Implements  shift, and go to state 86
    '{'           shift, and go to state 87


State 41

  101 ImplementList: T_Identifier .

    $default  reduce using rule 101 (ImplementList)


State 42

   97 ClassDecl: T_Class T_Identifier T_Implements ImplementList . '{' FieldList '}'
  100 ImplementList: ImplementList . T_Identifier ','

    T_Identifier  shift, and go to state 88
    '{'           shift, and go to state 89


State 43

   99 ClassDecl: T_Class T_Identifier '{' FieldList . '}'
  102 FieldList: FieldList . Field

    T_Void        shift, and go to state 1
    T_Bool        shift, and go to state 2
    T_Int         shift, and go to state 3
    T_Double      shift, and go to state 4
    T_String      shift, and go to state 5
    T_Identifier  shift, and go to state 8
    '}'           shift, and go to state 90

    VarDecl   go to state 91
    Variable  go to state 13
    Type      go to state 14
    FnDecl    go to state 92
    FnHeader  go to state 16
    Field     go to state 93


State 44

  106 InterfaceDecl: T_Interface T_Identifier '{' PrototypeList . '}'
  107 PrototypeList: PrototypeList . FnHeader ';'

    T_Void        shift, and go to state 1
    T_Bool        shift, and go to state 2
    T_Int         shift, and go to state 3
    T_Double      shift, and go to state 4
    T_String      shift, and go to state 5
    T_Identifier  shift, and go to state 8
    '}'           shift, and go to state 94

    Type      go to state 95
    FnHeader  go to state 96


State 45

   17 FnHeader: Type T_Identifier '(' Formals . ')'

    ')'  shift, and go to state 97


State 46

   86 Constant: T_Null .

    $default  reduce using rule 86 (Constant)


State 47

   41 Expr: T_This .

    $default  reduce using rule 41 (Expr)


State 48

   69 WhileStmt: T_While . '(' Expr ')' Stmt

    '('  shift, and go to state 98


State 49

   70 ForStmt: T_For . '(' EExpr ';' Expr ';' EExpr ')' Stmt

    '('  shift, and go to state 99


State 50

   67 IfStmt: T_If . '(' Expr ')' Stmt
   68       | T_If . '(' Expr ')' Stmt T_Else Stmt

    '('  shift, and go to state 100


State 51

   72 ReturnStmt: T_Return . Expr ';'
   73           | T_Return . ';'

    T_Null            shift, and go to state 46
    T_This            shift, and go to state 47
    T_New             shift, and go to state 53
    T_NewArray        shift, and go to state 54
    T_ReadInteger     shift, and go to state 56
    T_ReadLine        shift, and go to state 57
    T_Identifier      shift, and go to state 101
    T_StringConstant  shift, and go to state 60
    T_IntConstant     shift, and go to state 61
    T_DoubleConstant  shift, and go to state 62
    T_BoolConstant    shift, and go to state 63
    '-'               shift, and go to state 64
    '!'               shift, and go to state 65
    ';'               shift, and go to state 102
    '('               shift, and go to state 66

    ';'  [reduce using rule 65 (EExpr)]

    Expr      go to state 103
    EExpr     go to state 72
    Constant  go to state 80
    LValue    go to state 81
    Call      go to state 82


State 52

   71 BreakStmt: T_Break . ';'

    ';'  shift, and go to state 104


State 53

   61 Expr: T_New . '(' T_Identifier ')'

    '('  shift, and go to state 105


State 54

   62 Expr: T_NewArray . '(' Expr ',' Type ')'

    '('  shift, and go to state 106


State 55

   74 PrintStmt: T_Print . '(' ExprList ')' ';'

    '('  shift, and go to state 107


State 56

   59 Expr: T_ReadInteger . '(' ')'

    '('  shift, and go to state 108


State 57

   60 Expr: T_ReadLine . '(' ')'

    '('  shift, and go to state 109


State 58

   75 SwitchStmt: T_Switch . '(' Expr ')' '{' Switch '}'

    '('  shift, and go to state 110


State 59

   14 Type: T_Identifier .
   87 LValue: T_Identifier .
   90 Call: T_Identifier . '(' Actuals ')'

    '('  shift, and go to state 111

    T_Dims        reduce using rule 14 (Type)
    T_Identifier  reduce using rule 14 (Type)
    $default      reduce using rule 87 (LValue)


State 60

   85 Constant: T_StringConstant .

    $default  reduce using rule 85 (Constant)


State 61

   82 Constant: T_IntConstant .

    $default  reduce using rule 82 (Constant)


State 62

   83 Constant: T_DoubleConstant .

    $default  reduce using rule 83 (Constant)


State 63

   84 Constant: T_BoolConstant .

    $default  reduce using rule 84 (Constant)


State 64

   49 Expr: '-' . Expr

    T_Null            shift, and go to state 46
    T_This            shift, and go to state 47
    T_New             shift, and go to state 53
    T_NewArray        shift, and go to state 54
    T_ReadInteger     shift, and go to state 56
    T_ReadLine        shift, and go to state 57
    T_Identifier      shift, and go to state 101
    T_StringConstant  shift, and go to state 60
    T_IntConstant     shift, and go to state 61
    T_DoubleConstant  shift, and go to state 62
    T_BoolConstant    shift, and go to state 63
    '-'               shift, and go to state 64
    '!'               shift, and go to state 65
    '('               shift, and go to state 66

    $default  reduce using rule 65 (EExpr)

    Expr      go to state 112
    EExpr     go to state 72
    Constant  go to state 80
    LValue    go to state 81
    Call      go to state 82


State 65

   58 Expr: '!' . Expr

    T_Null            shift, and go to state 46
    T_This            shift, and go to state 47
    T_New             shift, and go to state 53
    T_NewArray        shift, and go to state 54
    T_ReadInteger     shift, and go to state 56
    T_ReadLine        shift, and go to state 57
    T_Identifier      shift, and go to state 101
    T_StringConstant  shift, and go to state 60
    T_IntConstant     shift, and go to state 61
    T_DoubleConstant  shift, and go to state 62
    T_BoolConstant    shift, and go to state 63
    '-'               shift, and go to state 64
    '!'               shift, and go to state 65
    '('               shift, and go to state 66

    $default  reduce using rule 65 (EExpr)

    Expr      go to state 113
    EExpr     go to state 72
    Constant  go to state 80
    LValue    go to state 81
    Call      go to state 82


State 66

   43 Expr: '(' . Expr ')'

    T_Null            shift, and go to state 46
    T_This            shift, and go to state 47
    T_New             shift, and go to state 53
    T_NewArray        shift, and go to state 54
    T_ReadInteger     shift, and go to state 56
    T_ReadLine        shift, and go to state 57
    T_Identifier      shift, and go to state 101
    T_StringConstant  shift, and go to state 60
    T_IntConstant     shift, and go to state 61
    T_DoubleConstant  shift, and go to state 62
    T_BoolConstant    shift, and go to state 63
    '-'               shift, and go to state 64
    '!'               shift, and go to state 65
    '('               shift, and go to state 66

    $default  reduce using rule 65 (EExpr)

    Expr      go to state 114
    EExpr     go to state 72
    Constant  go to state 80
    LValue    go to state 81
    Call      go to state 82


State 67

   24 VarDecls: VarDecls VarDecl .

    $default  reduce using rule 24 (VarDecls)


State 68

   35 Stmt: StmtBlock .

    $default  reduce using rule 35 (Stmt)


State 69

   23 StmtBlock: '{' VarDecls StmtList . '}'

    '}'  shift, and go to state 115


State 70

   26 StmtList: Stmt . StmtList

    T_Null            shift, and go to state 46
    T_This            shift, and go to state 47
    T_While           shift, and go to state 48
    T_For             shift, and go to state 49
    T_If              shift, and go to state 50
    T_Return          shift, and go to state 51
    T_Break           shift, and go to state 52
    T_New             shift, and go to state 53
    T_NewArray        shift, and go to state 54
    T_Print           shift, and go to state 55
    T_ReadInteger     shift, and go to state 56
    T_ReadLine        shift, and go to state 57
    T_Switch          shift, and go to state 58
    T_Identifier      shift, and go to state 101
    T_StringConstant  shift, and go to state 60
    T_IntConstant     shift, and go to state 61
    T_DoubleConstant  shift, and go to state 62
    T_BoolConstant    shift, and go to state 63
    '-'               shift, and go to state 64
    '!'               shift, and go to state 65
    '('               shift, and go to state 66
    '{'               shift, and go to state 27

    ';'       reduce using rule 65 (EExpr)
    $default  reduce using rule 27 (StmtList)

    StmtBlock   go to state 68
    StmtList    go to state 116
    Stmt        go to state 70
    Expr        go to state 71
    EExpr       go to state 72
    IfStmt      go to state 73
    WhileStmt   go to state 74
    ForStmt     go to state 75
    BreakStmt   go to state 76
    ReturnStmt  go to state 77
    PrintStmt   go to state 78
    SwitchStmt  go to state 79
    Constant    go to state 80
    LValue      go to state 81
    Call        go to state 82


State 71

   28 Stmt: Expr . ';'
   44 Expr: Expr . '+' Expr
   45     | Expr . '-' Expr
   46     | Expr . '*' Expr
   47     | Expr . '/' Expr
   48     | Expr . '%' Expr
   50     | Expr . '<' Expr
   51     | Expr . T_LessEqual Expr
   52     | Expr . '>' Expr
   53     | Expr . T_GreaterEqual Expr
   54     | Expr . T_Equal Expr
   55     | Expr . T_NotEqual Expr
   56     | Expr . T_And Expr
   57     | Expr . T_Or Expr
   66 EExpr: Expr .
   88 LValue: Expr . '.' T_Identifier
   89       | Expr . '[' Expr ']'
   91 Call: Expr . '.' T_Identifier '(' Actuals ')'

    T_LessEqual     shift, and go to state 117
    T_GreaterEqual  shift, and go to state 118
    T_Equal         shift, and go to state 119
    T_NotEqual      shift, and go to state 120
    T_And           shift, and go to state 121
    T_Or            shift, and go to state 122
    '<'             shift, and go to state 123
    '>'             shift, and go to state 124
    '+'             shift, and go to state 125
    '-'             shift, and go to state 126
    '*'             shift, and go to state 127
    '/'             shift, and go to state 128
    '%'             shift, and go to state 129
    '['             shift, and go to state 130
    '.'             shift, and go to state 131
    ';'             shift, and go to state 132

    ';'  [reduce using rule 66 (EExpr)]


State 72

   37 Expr: EExpr . ';'

    ';'  shift, and go to state 133


State 73

   29 Stmt: IfStmt .

    $default  reduce using rule 29 (Stmt)


State 74

   30 Stmt: WhileStmt .

    $default  reduce using rule 30 (Stmt)


State 75

   31 Stmt: ForStmt .

    $default  reduce using rule 31 (Stmt)


State 76

   32 Stmt: BreakStmt .

    $default  reduce using rule 32 (Stmt)


State 77

   33 Stmt: ReturnStmt .

    $default  reduce using rule 33 (Stmt)


State 78

   34 Stmt: PrintStmt .

    $default  reduce using rule 34 (Stmt)


State 79

   36 Stmt: SwitchStmt .

    $default  reduce using rule 36 (Stmt)


State 80

   39 Expr: Constant .

    $default  reduce using rule 39 (Expr)


State 81

   38 Expr: LValue . '=' Expr
   40     | LValue .
   63     | LValue . T_Dec
   64     | LValue . T_Inc

    T_Inc  shift, and go to state 134
    T_Dec  shift, and go to state 135
    '='    shift, and go to state 136

    $default  reduce using rule 40 (Expr)


State 82

   42 Expr: Call .

    $default  reduce using rule 42 (Expr)


State 83

    9 Variable: Type T_Identifier .

    $default  reduce using rule 9 (Variable)


State 84

   18 FnHeader: T_Void T_Identifier '(' Formals ')' .

    $default  reduce using rule 18 (FnHeader)


State 85

   21 FormalList: FormalList ',' . Variable

    T_Bool        shift, and go to state 2
    T_Int         shift, and go to state 3
    T_Double      shift, and go to state 4
    T_String      shift, and go to state 5
    T_Identifier  shift, and go to state 8

    Variable  go to state 137
    Type      go to state 37


State 86

   96 ClassDecl: T_Class T_Identifier T_Extends T_Identifier T_Implements . ImplementList '{' FieldList '}'

    T_Identifier  shift, and go to state 41

    ImplementList  go to state 138


State 87

   98 ClassDecl: T_Class T_Identifier T_Extends T_Identifier '{' . FieldList '}'

    $default  reduce using rule 103 (FieldList)

    FieldList  go to state 139


State 88

  100 ImplementList: ImplementList T_Identifier . ','

    ','  shift, and go to state 140


State 89

   97 ClassDecl: T_Class T_Identifier T_Implements ImplementList '{' . FieldList '}'

    $default  reduce using rule 103 (FieldList)

    FieldList  go to state 141


State 90

   99 ClassDecl: T_Class T_Identifier '{' FieldList '}' .

    $default  reduce using rule 99 (ClassDecl)


State 91

  104 Field: VarDecl .

    $default  reduce using rule 104 (Field)


State 92

  105 Field: FnDecl .

    $default  reduce using rule 105 (Field)


State 93

  102 FieldList: FieldList Field .

    $default  reduce using rule 102 (FieldList)


State 94

  106 InterfaceDecl: T_Interface T_Identifier '{' PrototypeList '}' .

    $default  reduce using rule 106 (InterfaceDecl)


State 95

   15 Type: Type . T_Dims
   17 FnHeader: Type . T_Identifier '(' Formals ')'

    T_Dims        shift, and go to state 25
    T_Identifier  shift, and go to state 142


State 96

  107 PrototypeList: PrototypeList FnHeader . ';'

    ';'  shift, and go to state 143


State 97

   17 FnHeader: Type T_Identifier '(' Formals ')' .

    $default  reduce using rule 17 (FnHeader)


State 98

   69 WhileStmt: T_While '(' . Expr ')' Stmt

    T_Null            shift, and go to state 46
    T_This            shift, and go to state 47
    T_New             shift, and go to state 53
    T_NewArray        shift, and go to state 54
    T_ReadInteger     shift, and go to state 56
    T_ReadLine        shift, and go to state 57
    T_Identifier      shift, and go to state 101
    T_StringConstant  shift, and go to state 60
    T_IntConstant     shift, and go to state 61
    T_DoubleConstant  shift, and go to state 62
    T_BoolConstant    shift, and go to state 63
    '-'               shift, and go to state 64
    '!'               shift, and go to state 65
    '('               shift, and go to state 66

    $default  reduce using rule 65 (EExpr)

    Expr      go to state 144
    EExpr     go to state 72
    Constant  go to state 80
    LValue    go to state 81
    Call      go to state 82


State 99

   70 ForStmt: T_For '(' . EExpr ';' Expr ';' EExpr ')' Stmt

    T_Null            shift, and go to state 46
    T_This            shift, and go to state 47
    T_New             shift, and go to state 53
    T_NewArray        shift, and go to state 54
    T_ReadInteger     shift, and go to state 56
    T_ReadLine        shift, and go to state 57
    T_Identifier      shift, and go to state 101
    T_StringConstant  shift, and go to state 60
    T_IntConstant     shift, and go to state 61
    T_DoubleConstant  shift, and go to state 62
    T_BoolConstant    shift, and go to state 63
    '-'               shift, and go to state 64
    '!'               shift, and go to state 65
    '('               shift, and go to state 66

    $default  reduce using rule 65 (EExpr)

    Expr      go to state 145
    EExpr     go to state 146
    Constant  go to state 80
    LValue    go to state 81
    Call      go to state 82


State 100

   67 IfStmt: T_If '(' . Expr ')' Stmt
   68       | T_If '(' . Expr ')' Stmt T_Else Stmt

    T_Null            shift, and go to state 46
    T_This            shift, and go to state 47
    T_New             shift, and go to state 53
    T_NewArray        shift, and go to state 54
    T_ReadInteger     shift, and go to state 56
    T_ReadLine        shift, and go to state 57
    T_Identifier      shift, and go to state 101
    T_StringConstant  shift, and go to state 60
    T_IntConstant     shift, and go to state 61
    T_DoubleConstant  shift, and go to state 62
    T_BoolConstant    shift, and go to state 63
    '-'               shift, and go to state 64
    '!'               shift, and go to state 65
    '('               shift, and go to state 66

    $default  reduce using rule 65 (EExpr)

    Expr      go to state 147
    EExpr     go to state 72
    Constant  go to state 80
    LValue    go to state 81
    Call      go to state 82


State 101

   87 LValue: T_Identifier .
   90 Call: T_Identifier . '(' Actuals ')'

    '('  shift, and go to state 111

    $default  reduce using rule 87 (LValue)


State 102

   73 ReturnStmt: T_Return ';' .

    $default  reduce using rule 73 (ReturnStmt)


State 103
